[gd_scene load_steps=6 format=3 uid="uid://dp72r7eppxsin"]

[ext_resource type="Script" uid="uid://cv1sf48mos3bh" path="res://player_old.gd" id="1_4flbx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sh265"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4flbx"]
radius = 2.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 2.0
height = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3pqv"]
radius = 2.0
height = 4.0

[node name="Player" type="Node2D"]
script = ExtResource("1_4flbx")

[node name="Body" type="RigidBody2D" parent="."]
collision_mask = 2
mass = 120.0
linear_damp = 5.0
angular_damp = 20.0

[node name="ColorRect" type="ColorRect" parent="Body"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -15.0
offset_right = 10.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9142768, 0.7239761, 0.500413, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("CapsuleShape2D_sh265")

[node name="LeftShoulderJoint" type="PinJoint2D" parent="Body"]
position = Vector2(-10, -15)
node_a = NodePath("..")
node_b = NodePath("LeftUpperArm")
angular_limit_enabled = true
angular_limit_lower = -2.0071287
angular_limit_upper = 0.7853982

[node name="LeftUpperArm" type="RigidBody2D" parent="Body/LeftShoulderJoint"]
collision_mask = 2
mass = 50.0

[node name="ColorRect" type="ColorRect" parent="Body/LeftShoulderJoint/LeftUpperArm"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.29803923, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/LeftShoulderJoint/LeftUpperArm"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_4flbx")

[node name="LeftElbowJoint" type="PinJoint2D" parent="Body/LeftShoulderJoint/LeftUpperArm"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("LeftForeArm")
angular_limit_enabled = true
angular_limit_upper = 2.3561945

[node name="LeftForeArm" type="RigidBody2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint"]
collision_mask = 2
mass = 50.0

[node name="ColorRect" type="ColorRect" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9529412, 0.45882353, 0.95686275, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_4flbx")

[node name="LeftTipTarget" type="Node2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm"]
position = Vector2(0, -10)

[node name="LeftWrist" type="PinJoint2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("LeftHand")
angular_limit_enabled = true
angular_limit_lower = -0.43633232
angular_limit_upper = 0.43633232

[node name="LeftHand" type="RigidBody2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist"]
position = Vector2(0, -2)
collision_mask = 2
mass = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist/LeftHand"]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="LeftGrabArea" type="Area2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist/LeftHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist/LeftHand/LeftGrabArea"]
shape = SubResource("CapsuleShape2D_i3pqv")

[node name="ColorRect" type="ColorRect" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist/LeftHand"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17169559, 0.66677374, 0.3950924, 1)

[node name="LeftTipTarget" type="Node2D" parent="Body/LeftShoulderJoint/LeftUpperArm/LeftElbowJoint/LeftForeArm/LeftWrist/LeftHand"]

[node name="RightShoulderJoint" type="PinJoint2D" parent="Body"]
position = Vector2(10, -15)
node_a = NodePath("..")
node_b = NodePath("RightUpperArm")
angular_limit_enabled = true
angular_limit_lower = -0.7853982
angular_limit_upper = 2.0071287

[node name="RightUpperArm" type="RigidBody2D" parent="Body/RightShoulderJoint"]
collision_mask = 2
mass = 50.0

[node name="ColorRect" type="ColorRect" parent="Body/RightShoulderJoint/RightUpperArm"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.29803923, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/RightShoulderJoint/RightUpperArm"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_4flbx")

[node name="RightElbowJoint" type="PinJoint2D" parent="Body/RightShoulderJoint/RightUpperArm"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("RightForeArm")
angular_limit_enabled = true
angular_limit_lower = -2.3561945

[node name="RightForeArm" type="RigidBody2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint"]
collision_mask = 2
mass = 50.0

[node name="ColorRect" type="ColorRect" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9529412, 0.45882353, 0.95686275, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_4flbx")

[node name="RightTipTarget" type="Node2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm"]
position = Vector2(0, -10)

[node name="RightWrist" type="PinJoint2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("RightHand")
angular_limit_enabled = true
angular_limit_lower = -0.43633232
angular_limit_upper = 0.43633232

[node name="RightHand" type="RigidBody2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist"]
position = Vector2(0, -2)
collision_mask = 2
mass = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist/RightHand"]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="RightGrabArea" type="Area2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist/RightHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist/RightHand/RightGrabArea"]
shape = SubResource("CapsuleShape2D_i3pqv")

[node name="ColorRect" type="ColorRect" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist/RightHand"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17169559, 0.66677374, 0.3950924, 1)

[node name="RightTipTarget" type="Node2D" parent="Body/RightShoulderJoint/RightUpperArm/RightElbowJoint/RightForeArm/RightWrist/RightHand"]
